--- a/src/app/pages/dashboard/right-panel/organizations/create-organization/create-organization.component.html
+++ b/src/app/pages/dashboard/right-panel/organizations/create-organization/create-organization.component.html
@@ -10,7 +10,7 @@
   <form>
     <div class="row">
       <div class="col-md-12">
-        <p class="form-title">Location details</p>
+        <p class="form-title">Organization details</p>
       </div>
     </div>
 
