--- a/src/app/pages/dashboard/right-panel/store/store.component.html
+++ b/src/app/pages/dashboard/right-panel/store/store.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-8">
       <h3>Store</h3><br>
       <small style="position: relative; top: -5px; margin-bottom: 1.5rem;">The Bindoo store for all your recyclables. Make money by recycling.</small><br>
-      <button mat-raised-button color="primary" routerLink="add">+ Add Item for Pickup</button>
+      <button mat-raised-button color="primary" routerLink="/dashboard/recyclable-items/add">+ Add Item for Pickup</button>
     </div>
     <div class="col-md-4">
       <mat-form-field appearance="outline" style="width: 100%;">
