--- a/src/app/pages/dashboard/right-panel/organizations/create-organization/create-organization.component.css
+++ b/src/app/pages/dashboard/right-panel/organizations/create-organization/create-organization.component.css
@@ -1,3 +1,20 @@
+header {
+    margin-bottom: 15px;
+}
+
+h3 {
+    color: #673AB6;
+    font-weight: 600;
+    display: inline-block;
+    margin: 0 20px 0 0;
+    font-size: 20px;
+}
+
 mat-form-field {
     width: 100%;
+}
+
+.form-title {
+    color: #673AB6;
+    font-weight: 600;
 }
