--- a/src/app/pages/dashboard/right-panel/recycleable-items/create-recycleable-items/create-recycleable-items.component.html
+++ b/src/app/pages/dashboard/right-panel/recycleable-items/create-recycleable-items/create-recycleable-items.component.html
@@ -1,3 +1,42 @@
-<p>
-  create-recycleable-items works!
-</p>
+<header>
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Recyclable Items > Add Recyclable Item</h3>
+    </div>
+  </div>
+</header>
+
+<mat-card>
+  <form>
+    <div class="row">
+      <div class="col-md-12">
+        <p class="form-title">Recyclable Item details</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Title</mat-label>
+          <input matInput placeholder="Name" name="name" [(ngModel)]="name" required>
+        </mat-form-field>
+      </div>
+
+    </div>
+
+    <div class="row" style="margin-bottom: 1.5rem;">
+      <div class="col-md-12">
+        <mat-form-field appearance="outline">
+          <mat-label>Description</mat-label>
+          <input matInput placeholder="Description" name="description" [(ngModel)]="description">
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <button mat-raised-button color="primary" type="submit" (click)="save()">Create Organization</button>
+      </div>
+    </div>
+  </form>
+</mat-card>
