--- a/src/app/pages/dashboard/right-panel/recycleable-items/recycleable-items-view/recycleable-items-view.component.html
+++ b/src/app/pages/dashboard/right-panel/recycleable-items/recycleable-items-view/recycleable-items-view.component.html
@@ -1,3 +1,58 @@
-<p>
-  recycleable-items-view works!
-</p>
+<header>
+  <div class="row">
+    <div class="col-md-8">
+      <h3>Recyclable Items</h3><br>
+      <small style="position: relative; top: -5px; margin-bottom: 1.5rem;">Add your recyclable items here to be picked up</small><br>
+      <button mat-raised-button color="primary" routerLink="add">+ Add recyclable item</button>
+    </div>
+    <div class="col-md-4">
+      <mat-form-field appearance="outline" style="width: 100%;">
+        <mat-label>Search</mat-label>
+        <input matInput placeholder="Find locations using name and address">
+        <mat-hint>Find organizations using their name</mat-hint>
+      </mat-form-field>
+    </div>
+  </div>
+</header>
+
+<div class="row">
+  <div class="col-md-12">
+    <table mat-table [dataSource]="organizations" class="mat-elevation-z8">
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Position Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
+      </ng-container>
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let element"> {{ element.description }} </td>
+      </ng-container>
+    
+      <!-- Weight Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let element">
+          {{element.status}}
+        </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let element">
+          <!-- <button mat-stroked-button color="primary">View</button> -->
+          <button mat-stroked-button color="warn" (click)="removeOrganization(element.uid)">Remove</button>
+        </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</div>
