Added lane create

--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -64,7 +64,7 @@
       <a routerLink="lanes" *ngIf="tokenResult.claims.userType === 2">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-lanes.svg" alt="Store icon">
-          <p>Lanes</p>
+          <p>Lanes / Zones</p>
         </li>
       </a>
 
