--- a/src/app/pages/dashboard/right-panel/lanes/view-lanes/view-lanes.component.css
+++ b/src/app/pages/dashboard/right-panel/lanes/view-lanes/view-lanes.component.css
@@ -1,7 +1,3 @@
-header {
-    margin-bottom: 15px;
-}
-
 h3 {
     color: #673AB6;
     font-weight: 600;
@@ -10,11 +6,18 @@ h3 {
     font-size: 20px;
 }
 
-mat-form-field {
+header {
+    margin-bottom: 15px;
+}
+
+.card {
+    max-width: 100px;
+}
+
+table {
     width: 100%;
 }
 
-.form-title {
-    color: #673AB6;
-    font-weight: 600;
+button {
+    margin-right: 10px;
 }
