--- a/src/app/pages/dashboard/right-panel/analytics/analytics.component.html
+++ b/src/app/pages/dashboard/right-panel/analytics/analytics.component.html
@@ -149,19 +149,20 @@
       ></apx-chart>
       </div>
     </div>
-    <div class="col-md-6">
+    
+    <div class="col-md-6" *ngIf="idTokenResult && idTokenResult.claims.userType === 2">
       <h5 class="section-header">Pickup List</h5>
       <div class="row">
         <div class="col-md-12">
-          <div class="pickup-list-item">
+          <div class="pickup-list-item" *ngFor="let item of garbage">
             <div class="row">
               <div class="col-md-4">
-                <small>Address</small>
-                <p>123, BumbleBee Street, Colombo 2</p>
+                <small>Lane / Zone</small>
+                <p>{{item.name}}</p>
               </div>
               <div class="col-md-4 text-center">
                 <small>Quantity</small>
-                <p>20L</p>
+                <p>{{item.total}} L</p>
               </div>
               <div class="col-md-4">
                 <button mat-flat-button color="primary">Mark as Done</button>
@@ -169,38 +170,12 @@
             </div>
           </div>
 
-          <div class="pickup-list-item">
-            <div class="row">
-              <div class="col-md-4">
-                <small>Address</small>
-                <p>123, BumbleBee Street, Colombo 2</p>
-              </div>
-              <div class="col-md-4 text-center">
-                <small>Quantity</small>
-                <p>20L</p>
-              </div>
-              <div class="col-md-4">
-                <button mat-flat-button color="primary">Mark as Done</button>
-              </div>
-            </div>
-          </div>
+          
 
 
-          <div class="pickup-list-item">
-            <div class="row">
-              <div class="col-md-4">
-                <small>Address</small>
-                <p>123, BumbleBee Street, Colombo 2</p>
-              </div>
-              <div class="col-md-4 text-center">
-                <small>Quantity</small>
-                <p>20L</p>
-              </div>
-              <div class="col-md-4">
-                <button mat-flat-button color="primary">Mark as Done</button>
-              </div>
-            </div>
-          </div>
+          
+
+
         </div>
       </div>
       
