--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -68,12 +68,12 @@
         </li>
       </a>
 
-      <!-- <a routerLink="store">
+      <a routerLink="store" *ngIf="tokenResult.claims.userType === 4">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-store.svg" alt="Store icon">
-          <p>Store</p>
+          <p>Orders</p>
         </li>
-      </a> -->
+      </a>
 
       <a routerLink="store" *ngIf="tokenResult.claims.userType === 1">
         <li routerLinkActive="is-active">
